--- a/challenges/challenge 1/Readme
+++ b/challenges/challenge 1/Readme
@@ -1,1 +1,2 @@
-
+# This is a 3 tier environment setup with a web subnet, app subnet and a DB subnet. The linux vm is deployed on to the websubnet.
+Using Custom data in terraform 'httpd' is deployed on the  linux vm withing the web subnet.
